--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,5 +3,9 @@ services:
   opencv:
     build: .
     container_name: opencv
+    environment: 
+      - DISPLAY=host.docker.internal:0
+      - OPENCV_SAMPLES_DATA_PATH=/data/opencv/samples/data/
     volumes:
-      - ${PWD}/src:/src
+      - ${PWD}/workspace:/workspace
+    working_dir: /workspace
